# qbutler

./: .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.rst  conftest.py  flake.nix  package_versioning.py  pyproject.toml  requirements.in  requirements.txt  requirementsDev.in  requirementsDev.txt  setup.cfg  setup.py
.claude/: .gitignore  clone-deps.sh  settings.json  settings.local.json
.claude/skills/test-nix/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/plans/: kernel-mode-optimisations.md
example/: device_db.py  example_gaussian3d.py  example_monitor.py  test_monitor.py
notebooks/: Mess with networks.ipynb  Weakrefs.ipynb  test_refs.py
planning/: handoff-kernel-methods.md  handoff-nix-flake.md
qbutler/: __init__.py  _version.py  calibration.py  ccb.py  client.py  dag.py  entrypoints.py  hello.py  monitoring.py  optimizers.py  patch_ndscan.py  patch_sipyco.py  precompile.py  runner.py  worker_ipc_lock.py
qbutler/applets/: __init__.py  dag_applet.py  monitor_dag.py  optimizer_applet.py
tests/: conftest.py  fixtures.py  marker_exp.py  test_basics.py  test_dependencies.py  test_fixtures.py  test_imports.py  test_ndscan_bug.py  test_sample.py  test_tests.py  wait_for_port.py
tests/func/: hello_experiment.py  kernel_calibrations.py  mixed_dag_calibrations.py  test_applet_launch.py  test_basics.py  test_calibrations_in_dag.py  test_client_escape.py  test_dag_kernel_host.py  test_dependencies.py  test_fixing.py  test_fixtures.py  test_kernel_calibration.py  test_kernel_dag_fix.py  test_kernel_optimization.py  test_kernel_run_once_api.py  test_monitor.py  test_on_kernel.py  test_optimizable_params.py  test_optimization.py  test_optimizer_trace.py  test_p1_extensions.py  test_precompiled_dag.py  test_realistic.py  test_tests.py  test_timeout.py
tests/unit/: test_build_deferral.py  test_calibrationResults_on_core.py  test_dag.py  test_escape_loop.py  test_imports.py  test_kernels.py  test_no_fixme.py  test_optimizers.py  test_pipe_race.py  test_precompilation.py  test_precompile_pool.py  test_run_once.py  test_worker_ipc_lock.py
