[tool.poetry]
name = "qbutler"
version = "0.1.0"
description = "Manage a complex research experiment with lots of moving parts and drifting calibrations automatically and repeatably."
authors = ["Charles Baynham <charles.baynham@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"

networkx = "^2.8.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
ipython = "^8.16.1"
pytest = "^7.4.2"
pytest-timeout = "^2.1.0"
coverage = "^7.3.2"
tomli = "^2.0.1"

# Remove the sphinx dependencies for now (2023-10-06) as they cause an infinite recursion in poetry2nix
#sphinx = "^7.2.6"
#sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "tests"
pythonpath = "."
addopts= "-n auto"
